package ar.uba.fi.algo3.final20200917;

public interface Carga {

}
