package ar.uba.fi.algo3.final20200917;

public interface Equipable {
    void equipar(PortaBici portaBici);
}
